# TypeSafeMessageParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_cmake.yml  docs_pages.yml
cmake/: CompilerWarnings.cmake  Options.cmake
docker/: Dockerfile
docs/: api_reference.rst  architecture.rst  changelog.rst  conf.py  examples.rst  getting_started.rst  index.rst  message_structure.rst  requirements.txt  testing.rst
scripts/: amalgamate.py
src/: CMakeLists.txt  main.cpp
src/include/: MessageParser.h
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  benchmarks.cpp
test/catch2/: CMakeLists.txt  tests.cpp
